
  * Removed deprecated getPid() member from Fork
  * Removed deprecated get...Fd() members from Pipe
  * Removed deprecated get...Fd() members from Selector
  * Selector's setAlarm() member performs a validity check on the specified 
    alarm time 
  * Selector's wait() member handles no-alarm specifications correctly (i.e., 
    according to the description in the select(2) man-page.

 -- Frank B. Brokken STAMP

bobcat (2.02.03)

  * Missed another EOF in MultiStreambuf. Now repaired.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 06 May 2009 10:36:22 +0200

bobcat (2.02.02)

  * Repaired incomplete initialization bug in SocketBase

  * Added Fork::prepareDaemon() performing common actions when starting a
    daemon child process.

  * Repaired DST and extraction bugs in DateTime

  * OFoldStreambuf's inheritance tree now places the OFilterStreambuf ahead of
    the std::ostream class to prevent strange run-time problems on Macs.

  * New (static) members: OFoldStream(buf)::leftMargin(), 
    OFoldStream(buf)::rightMargin()

  * OFoldStream::open() members do not close the foldstream (actually,
    they didn't do that, but the man-page wrongly suggested they did close the
    stream).

  * Cosmetic changes to INSTALL, INSTALL.im and icmake/install

  * Replaces and extends intermediate release 2.02.01 only made available at
    SourceForge 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 03 Apr 2009 16:29:47 +0200

bobcat (2.01.1)

  * The manipulator FBB::FATAL (cf. man -e bobcat log) now throws an
    Errno exception (Errno(1)) as per the log man-page, and doesn't call
    exit(1) anymore.

bobcat (2.01.0)

  * Included  cstdio in all .ih files of classes using EOF (required for g++
    4.4) 

  * Moved Table::Element's constructor back to the <table> header file
    (required for Table::push_back()).

  * Added Log member level() retrieving the currently set loglevel. 

  * Added Log member instance() as a (preferred) alternative for
    getInstance(). 
