@@ -92,6 +92,12 @@ available character. It returns tt(EOF) if no (more) characters are available.
         This member em(overrides) the bf(std::streambuf) member. It returns
 the tt(n) next available characters, storing them into tt(dest). It returns
 the number of characters that were actually read.
+    This function is called from, e.g., the tt(istream::read()) member.  It
+will first copy what's available in tt(IFdStreambuf)'s own buffer and will
+then try to read some more from the file descriptor, adding additionally read
+bytes to the destination buffer. Unless the requested amount of tt(n) bytes is
+available tt(istream::good()) will return ttfalse). Programs may have
+to clear the stream's flags when, e.g., fewer bytes were read.
     )
     Note that there is no overloaded assignment operator available for this
 class. 
@@ -107,7 +113,11 @@ manpageseealso()
     bf(std::streambuf)
 
 manpagebugs()
-    Note that by default the provided file descriptors will remain open. The
+    The member tt(xsgetn(char *dest, std::streamsize n)) will set
+tt(istream::good()) to tt(false) when fewer bytes than tt(n) were read using
+tt(istream::read()). Also see tt(xsgetn)'s description.
+
+    Note that by default the provided file descriptors remain open. The
 complementary class bf(ofdstreambuf)(3bobcat) em(closes) the file descriptor
 by default. This inconsistency was deliberately accepted to keep the classes
 interfaces backward compatible.
