@@ -7,6 +7,9 @@ bobcat (2.03.00) ISN
     alarm time 
   * Selector's wait() member handles no-alarm specifications correctly (i.e., 
     according to the description in the select(2) man-page.
+  * Redirector has a new member: through()
+  * IFdStreambuf::xsgetn() was reimplemented to allow unformated reads from 
+    std::istream (and IFdStream) objects without referring to underflow.
 
  -- Frank B. Brokken STAMP
 
